[package]
name = "mesh_parser"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust util relating to stormworks .mesh files. Straight rewrite of parts of CodeLeopard's C# program because we needed it in rust"
repository = "https://github.com/JudgementalBird/stormworksmeshutils"
readme = "README.md"
keywords = ["gamedev", "stormworks", "mesh"]
categories = ["rendering::data-formats"]

[dependencies]
vek = "0.17.1"
tokio = { version = "1.41.1", features = ["full"] }
serde = "1.0.215"
bincode = "1.3.3"
futures = "0.3.31"

[lib]
crate-type = ["lib"]
