[package]
name = "stormworks_mesh_parser"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust util relating to stormworks .mesh files. Straight rewrite of parts of CodeLeopard's C# program because we needed it in rust"
repository = "https://github.com/JudgementalBird/stormworksmeshutils"
readme = "README.md"
keywords = ["gamedev", "stormworks", "mesh"]
categories = ["rendering::data-formats"]

[dependencies]
bevy_asset = "0.15.0"
futures = "0.3.31"
vek = "0.17.1"
bevy_mesh = { version="0.15.0", optional=true }
bevy_render = { version="0.15.0", optional=true }

[lib]
crate-type = ["lib"]

[features]
bevy-integration = ["dep:bevy_mesh", "dep:bevy_render"]