[package]
name = "stormworks_mesh_parser"
version = "0.1.8"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust util relating to stormworks .mesh files. Straight rewrite of parts of CodeLeopard's C# program because we needed it in rust"
repository = "https://github.com/JudgementalBird/stormworksmeshutils"
readme = "README.md"
keywords = ["gamedev", "stormworks", "mesh"]
categories = ["rendering::data-formats"]

[dependencies]
vek = "0.17.1"
futures = { version="0.3.31", optional=true }
bevy = { version="0.15.0", optional=true }

[lib]
crate-type = ["lib"]

[features]
bevy-integration = ["dep:bevy"]
async = ["dep:futures"]
